const_typed_builder_test/compile_fail/group_2.stderr
error[E0599]: no method named `build` found for struct `FooBuilder<true, false>` in the current scope
  --> ./compile_fail/group_2.rs:12:62
   |
4  |     #[derive(Debug, Default, PartialEq, Eq, Builder)]
   |                                             ------- method `build` not found for this struct
...
12 |     let foo = Foo::builder().bar("Hello world!".to_string()).build();
   |                                                              ^^^^^ method not found in `FooBuilder<true, false>`
   |
   = note: the method was found for
           - `FooBuilder<true, true>`
